# meadows-docs

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.builder  Dockerfile.server  README.md  app.py  docker-compose.yml  pyproject.toml  tasks.py
captain-hooks/: backup_files.sh  restore_files.sh
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md  installation.md
docs/docs/architecture/: dependency-graph.md  design-principles.md  labeling.md  overview.md  protocol-boundary.md
docs/docs/bot/: index.md
docs/docs/client/: index.md
docs/docs/development/: contributing.md  docker.md  testing.md
docs/docs/protocol/: index.md
docs/docs/reference/: cli-commands.md  configuration.md  environment-variables.md  forms.md  socketio-api.md  webhook-api.md
docs/docs/server/: index.md
docs/docs/tui/: index.md
docs/docs/web/: index.md
